vehicle/tests/golden/error/typing/indexOutOfBoundsConcrete/indexOutOfBoundsConcrete.vcl
outOfBounds : Tensor Real [1] -> Real
outOfBounds x = x ! 1
